# LinuxSetup

./: README.md
Bash/: first.sh
Linux program/: main.cpp
lab-env-master/: CMakeCache.txt  Makefile  cmake_install.cmake
lab-env-master/engine/: Makefile  cmake_install.cmake
lab-env-master/engine/core/: Makefile  cmake_install.cmake
lab-env-master/engine/render/: Makefile  cmake_install.cmake  window.h
lab-env-master/exts/: Makefile  cmake_install.cmake
lab-env-master/exts/glew/: Makefile  cmake_install.cmake
lab-env-master/exts/glfw/: Makefile  cmake_install.cmake
lab-env-master/exts/glfw/src/: Makefile  cmake_install.cmake
lab-env-master/projects/: Makefile  cmake_install.cmake
lab-env-master/projects/ImGuiExample/: ImGuiExample  Makefile  cmake_install.cmake
lab-env-master/projects/ImGuiExample/code/: exampleapp.cc
lab-env-master/projects/Labb 2/: CMakeLists.txt  Makefile  cmake_install.cmake  labb2
lab-env-master/projects/Labb 2/code/: Matrix4D.h  Mesh.h  Vector4D.h  exampleapp.cc  exampleapp.h
lab-env-master/projects/Labb 3/: CMakeLists.txt  Makefile  cmake_install.cmake  labb3
lab-env-master/projects/Labb 3/code/: Mesh.h  Texture.h  exampleapp.cc  exampleapp.h
lab-env-master/projects/Labb 4/: CMakeLists.txt  Makefile  cmake_install.cmake  labb4
lab-env-master/projects/Labb 4/code/: GraphicsNode.h  Matrix4D.h  Mesh.h  ShaderObject.h  exampleapp.cc
lab-env-master/projects/Labb 5/: CMakeLists.txt  Makefile  cmake_install.cmake  labb5
lab-env-master/projects/Labb 5/code/: GraphicsNode.h  Mesh.h  Texture.h  exampleapp.cc  exampleapp.h
lab-env-master/projects/example/: Makefile  cmake_install.cmake  example
